Change create/edit form title

--- a/templates/public/create-or-edit-submission.html
+++ b/templates/public/create-or-edit-submission.html
@@ -7,7 +7,7 @@
 
 <div class="d-flex justify-content-center mt-5">
     <div class="col-6">
-        <h5>Create a Post</h5>
+        <h5>{{ action_name }} a Post</h5>
         <p class="white-hr my-3" style="height:1px"></p>
         <form class="p-4 bg-white rounded-1 border-0" method="post">
             {% csrf_token %}
