--- a/templates/public/mainpage.html
+++ b/templates/public/mainpage.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load humanize %}
 {% load static %}
 
 {% block content %}
@@ -8,69 +7,21 @@
 <script src="{% static '/js/votes.js' %}"></script>
 <script src="{% static '/js/submissions.js' %}"></script>
 
-{% if request.user.is_authenticated %}
-    <div class="d-flex justify-content-center px-4 mt-3">
-        <div class="d-flex col-6 p-2 bg-white create-submission-card">
-            <img class="create-post-avatar me-2" src="{{ readit_user.avatar_url }}" />
-            <input id="create-submission-card-input" class="form-control w-100" type="text" placeholder="Create Post" />
-        </div>
-    </div>
-{% endif %}
-
-<div class="card-columns">
-    {% for submission in submissions %}
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 mx-auto">
-                    <div class="card my-3">
-                        <div class="card-header d-flex align-items-center justify-content-between">
-                            <div>
-                                <form action="{% url 'upvote' submission.id %}" method="post">
-                                    {% csrf_token %}
-                                    <i class="upvote-arrow-{{submission.id}} fas fa-arrow-up upvote-arrow" onclick="upvote({{submission.id}})"></i>
-                                </form>
-                                <span class="upvote-counter-{{ submission.id }} badge badge-primary badge-pill text-dark">{{ submission.upvotes }}</span>
-                                <form action="{% url 'downvote' submission.id %}" method="post">
-                                    {% csrf_token %}
-                                    <i class="downvote-arrow-{{submission.id}} fas fa-arrow-down downvote-arrow" onclick="downvote({{submission.id}})"></i>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h6 class="card-text">
-                                <a href="/r/{{ submission.subreadit }}" class="text-decoration-none text-dark">r/{{ submission.subreadit }}</a> :
-                                <a href="/user/{{ submission.author }}" class="card-subtitle mb-2 text-decoration-none text-dark">u/{{ submission.author }}</a> :
-                                <span class="card-subtitle mb-2 text-muted">{{ submission.created_at|naturaltime }}</span>
-                            </h6>
-                            <h5 class="card-title">{{ submission.title }}</h5>
-                            <p class="card-text">{{ submission.text }}</p>
-                            <img src="{{ submission.image_url }}" alt="" class="img-fluid">
-                        </div>
-                        <div class="card-footer d-flex align-items-center">
-                            <a href="/{{ submission.id }}/comments" class="btn btn-secondary btn-sm me-2">
-                                <i class="fas fa-comment"></i>
-                                Comments
-                            </a>
-                            {% if submission.author.id == request.user.id %}
-                                <a href="/submit/{{ submission.id }}" class="btn btn-primary btn-sm me-2">
-                                    <i class="far fa-edit"></i>
-                                    Edit
-                                </a>
-                                <a onclick="deleteSubmission({{ submission.id }})" class="btn btn-danger btn-sm">
-                                    <i class="far fa-trash-alt"></i>
-                                    Delete
-                                </a>
-                                <form class="visually-hidden" id="delete-submission-form-{{ submission.id }}" method="post">
-                                    {% csrf_token %}
-                                    <input type="text" name="submission_id" value="{{ submission.id }}" />
-                                </form>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
+<div>
+    {% if request.user.is_authenticated %}
+        <div class="d-flex justify-content-center px-4 mt-3">
+            <div class="d-flex col-6 p-2 bg-white create-submission-card">
+                <img class="create-post-avatar me-2" src="{{ readit_user.avatar_url }}" />
+                <input id="create-submission-card-input" class="form-control w-100" type="text" placeholder="Create Post" />
             </div>
         </div>
-    {% endfor %}
+    {% endif %}
+
+    <div class="mt-1">
+        {% for submission in submissions %}
+            {% include './submission-card.html' with submission=submission %}
+        {% endfor %}
+    </div>
 </div>
 
 {% endblock %}
