--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <script src="{% static "js/libraries/jQuery/jquery-3.6.3.min.js" %}"></script>
         <script src="https://kit.fontawesome.com/27fa2195f2.js" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body class="modal-open">
         {% block navbar %}
             {% include 'layout/navbar.html' %}
         {% endblock %}
