--- a/templates/public/submission-card.html
+++ b/templates/public/submission-card.html
@@ -3,8 +3,8 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6 mx-auto">
-            <div class="card my-2">
+        <div class="col-12 mx-auto px-3">
+            <div class="card mb-2">
                 <div class="card-header d-flex align-items-center justify-content-between">
                     <div>
                         <form action="{% url 'upvote' submission.id %}" method="post">
