Add back to top button

--- a/templates/public/mainpage.html
+++ b/templates/public/mainpage.html
@@ -3,7 +3,6 @@
 
 {% block content %}
 
-<script src="{% static '/js/common.js' %}"></script>
 <script src="{% static '/js/votes.js' %}"></script>
 <script src="{% static '/js/submissions.js' %}"></script>
 
@@ -49,6 +48,9 @@
             </div>
             <hr />
             <small>Readit Inc © 2023. All rights reserved</small>
+        </div>
+        <div class="d-flex justify-content-center">
+            <button class="btn app-btn back-to-top-btn">Back to Top</button>
         </div>
     </div>
 </div>
