--- a/static/css/app.css
+++ b/static/css/app.css
@@ -271,4 +271,22 @@ html {
 .modal-open[style] {
     padding-right: 0px !important;
 }
+
+.back-to-top-btn {
+    position: fixed;
+    bottom: 10px;
+    right: 15px;
+    background-color: #0079d3;
+    color: white;
+    border: 1px solid #0079d3;
+    font-weight: bold;
+    height: 38px;
+    width: 120px;
+    border-radius: 25px;
+}
+
+.back-to-top-btn:hover{
+    background-color: #0f97ff;
+    color: white;
+}
    
