--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
         <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
         <script src="{% static "js/libraries/jQuery/jquery-3.6.3.min.js" %}"></script>
         <script src="https://kit.fontawesome.com/27fa2195f2.js" crossorigin="anonymous"></script>
+        <script src="{% static '/js/common.js' %}"></script>
     </head>
     <body class="modal-open">
         {% block navbar %}
