--- a/templates/public/comments.html
+++ b/templates/public/comments.html
@@ -6,6 +6,14 @@
 
 <script src="{% static '/js/votes.js' %}"></script>
 
-{% include './submission-card.html' with submission=submission %}
+<div class="d-flex justify-content-center mt-3">
+    <div class="col-6">
+        {% include './submission-card.html' with submission=submission %}
+    </div>
+</div>
+
+<div class="d-flex justify-content-center">
+    <button class="btn app-btn back-to-top-btn">Back to Top</button>
+</div>
 
 {% endblock %}
