--- a/templates/public/profile.html
+++ b/templates/public/profile.html
@@ -6,36 +6,42 @@
 
 <script src="{% static '/js/votes.js' %}"></script>
 
-<div>
-    <div class="card-columns">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 mx-auto">
-                    <div class="card my-3">
-                        <div class="card-header text-center d-flex">
-                            <div class="col-2">
-                                <img src="{{ user.avatar_url }}" alt="avatar" class="mr-3 rounded-circle" style="width: 50px; height: 50px;">
+<div class="d-flex justify-content-center">
+    <div class="col-6">
+        <div class="card-columns">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 mx-auto">
+                        <div class="card my-3">
+                            <div class="card-header text-center d-flex">
+                                <div class="col-2">
+                                    <img src="{{ user.avatar_url }}" alt="avatar" class="mr-3 rounded-circle" style="width: 50px; height: 50px;">
+                                </div>
+                                <div class="col-8 align-self-center">
+                                    <h2>u/{{ user.user }}</h2>
+                                </div>
                             </div>
-                            <div class="col-8 align-self-center">
-                                <h2>u/{{ user.user }}</h2>
+                            <div class="card-body">
+                                <p>{{ user.about_text }}</p>
+                                <p>Karma: {{ user.karma }}</p>
+                                <p>Cake day: {{ user.user.date_joined|date:"d.m.Y" }}</p>
                             </div>
-                        </div>
-                        <div class="card-body">
-                            <p>{{ user.about_text }}</p>
-                            <p>Karma: {{ user.karma }}</p>
-                            <p>Cake day: {{ user.user.date_joined|date:"d.m.Y" }}</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        
+        <div class="card-columns col-12">
+            {% for submission in submissions %}
+                {% include './submission-card.html' with submission=submission %}
+            {% endfor %}
+        </div>
     </div>
-    
-    <div class="card-columns">
-        {% for submission in submissions %}
-            {% include './submission-card.html' with submission=submission %}
-        {% endfor %}
-    </div>
+</div>
+
+<div class="d-flex justify-content-center">
+    <button class="btn app-btn back-to-top-btn">Back to Top</button>
 </div>
 
 {% endblock %}
