--- a/templates/public/subreadit.html
+++ b/templates/public/subreadit.html
@@ -4,38 +4,47 @@
 
 {% block content %}
 
-<div class="card-columns">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 mx-auto">
-                <div class="card my-3">
-                    <div class="card-header text-center">
-                        <h2>r/{{ subreadit.name }}</h2>
-                    </div>
-                    <div class="card-body">
-                        <p>{{ subreadit.description }}</p>
-                        <div>
-                            <p><strong>Owner:</strong> u/{{ subreadit.owner }}</p>
-                            <p><strong>Created at:</strong> {{ subreadit.created_at|date:"d.m.Y"}}</p>
+<div class="d-flex justify-content-center">
+    <div class="col-6">
+        <div class="card-columns">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 mx-auto">
+                        <div class="card my-3">
+                            <div class="card-header text-center">
+                                <h2>r/{{ subreadit.name }}</h2>
+                            </div>
+                            <div class="card-body">
+                                <p>{{ subreadit.description }}</p>
+                                <div>
+                                    <p><strong>Owner:</strong> u/{{ subreadit.owner }}</p>
+                                    <p><strong>Created at:</strong> {{ subreadit.created_at|date:"d.m.Y"}}</p>
+                                </div>
+                                <p><strong>Moderators:</strong>
+                                    {% for moderator in subreadit.moderators.all %}
+                                        u/{{ moderator }},
+                                    {% endfor %}
+                                </p>
+                            </div>
                         </div>
-                        <p><strong>Moderators:</strong>
-                            {% for moderator in subreadit.moderators.all %}
-                                u/{{ moderator }},
-                            {% endfor %}
-                        </p>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="card-columns">
+            {% for submission in submissions %}
+                {% include './submission-card.html' with submission=submission %}
+            {% endfor %}
+        </div>
     </div>
+</div>
+
+<div class="d-flex justify-content-center">
+    <button class="btn app-btn back-to-top-btn">Back to Top</button>
 </div>
 
 <script src="{% static '/js/votes.js' %}"></script>
 
-<div class="card-columns">
-    {% for submission in submissions %}
-        {% include './submission-card.html' with submission=submission %}
-    {% endfor %}
-</div>
+
 
 {% endblock %}
