--- a/templates/public/submission-card.html
+++ b/templates/public/submission-card.html
@@ -8,22 +8,32 @@
                 <div class="card-header d-flex align-items-center justify-content-between">
                     <div class="card-header d-flex align-items-center justify-content-between">
                         {% if request.user.is_authenticated %}
+                            <div class="d-flex flex-column align-items-start">
                             {% if not has_upvoted %}
-                                <form action="{% url 'upvote' submission.id %}" method="post">
-                                    {% csrf_token %}
-                                    <i class="upvote-arrow-{{submission.id}} fas fa-arrow-up upvote-arrow" onclick="upvote({{submission.id}})"></i>
-                                </form>
+                                <div>
+                                    <form action="{% url 'upvote' submission.id %}" method="post">
+                                        {% csrf_token %}
+                                        <i class="upvote-arrow-{{submission.id}} fas fa-arrow-up upvote-arrow" onclick="upvote({{submission.id}})"></i>
+                                    </form>
+                                </div>
                             {% else %}
-                                 <form action="{% url 'upvote' submission.id %}" method="post">
-                                    {% csrf_token %}
-                                    <i class="upvote-arrow-{{submission.id}} fas fa-arrow-up upvote-arrow upvote-clicked" onclick="upvote({{submission.id}})"></i>
-                                </form>
+                                <div>
+                                     <form action="{% url 'upvote' submission.id %}" method="post">
+                                        {% csrf_token %}
+                                        <i class="upvote-arrow-{{submission.id}} fas fa-arrow-up upvote-arrow upvote-clicked" onclick="upvote({{submission.id}})"></i>
+                                    </form>
+                                </div>
                             {% endif %}
-                            <span class="upvote-counter-{{ submission.id }} badge badge-primary badge-pill text-dark">{{ submission.upvotes }}</span>
-                            <form action="{% url 'downvote' submission.id %}" method="post">
-                                {% csrf_token %}
-                                <i class="downvote-arrow-{{submission.id}} fas fa-arrow-down downvote-arrow" onclick="downvote({{submission.id}})"></i>
-                            </form>
+                            <div>
+                                <span class="upvote-counter-{{ submission.id }} badge badge-primary badge-pill text-dark">{{ submission.upvotes }}</span>
+                            </div>
+                            <div>
+                                <form action="{% url 'downvote' submission.id %}" method="post">
+                                    {% csrf_token %}
+                                    <i class="downvote-arrow-{{submission.id}} fas fa-arrow-down downvote-arrow" onclick="downvote({{submission.id}})"></i>
+                                </form>
+                            </div>
+                        </div>
                         {% else %}
                             <div class="d-flex flex-column align-items-start">
                                 <div>
