--- a/templates/public/comments.html
+++ b/templates/public/comments.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 <script src="{% static '/js/votes.js' %}"></script>
+<script src="{% static '/js/comments.js' %}"></script>
 
 <div class="d-flex justify-content-center mt-3">
     <div class="col-6">
