Add delete comment functionality

--- a/templates/public/submission-card.html
+++ b/templates/public/submission-card.html
@@ -108,6 +108,11 @@
                                         <span class="text-muted">{{ comment.created_at|naturaltime }}</span>
                                     </div>
                                     <p>{{ comment.content }}</p>
+                                    {% if request.user.is_authenticated and comment.user.user == request.user %}
+                                        <div>
+                                            <button class="btn btn-danger btn-sm" onclick="deleteComment({{comment.id}})">Delete</button>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
