--- a/templates/public/submission-card.html
+++ b/templates/public/submission-card.html
@@ -1,5 +1,6 @@
 {% block content %}
 {% load humanize %}
+{% load static %}
 
 <div class="container">
     <div class="row">
@@ -101,7 +102,7 @@
                     {% for comment in comments %}
                         <div class="card">
                             <div class="media my-3">
-                                <img src="{{ comment.user.avatar_url }}" alt="avatar" class="mr-3 rounded-circle" style="width: 50px; height: 50px;">
+                                <img src="{% if comment.user.avatar_url %}{{comment.user.avatar_url}}{% else %}{% static 'images/default-avatar.png' %}{% endif %}" alt="avatar" class="mr-3 rounded-circle" style="width: 50px; height: 50px;">
                                 <div class="media-body">
                                     <div class="d-flex justify-content-between">
                                         <h5 class="mt-0">{{ comment.user }}</h5>
