--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -62,6 +62,12 @@
                 <ul class="dropdown-menu dropdown-menu-lg-end user-dropdown">
                   <li>
                     {% if request.user.is_authenticated %}
+                        <button class="dropdown-item" type="button" onclick="window.location.href='/user/{{request.user.username}}'">
+                            <a>
+                                <i class="fas fa-user mx-2" ></i>
+                                Profile
+                            </a>
+                        </button>
                         <button class="dropdown-item sign-out-btn" type="button">
                             <a>
                                 <i class="fas fa-sign-out-alt mx-2"></i>
