--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,3 +1,12 @@
+.card{
+    margin: 5px 5px 5px 5px;
+    padding: 10px 10px 10px 10px;
+    
+}
+.flex-column{
+    align-items: center!important;
+
+}
 .app-btn {
     border-radius: 25px;
 }
