--- a/templates/public/comments.html
+++ b/templates/public/comments.html
@@ -8,7 +8,7 @@
 <script src="{% static '/js/comments.js' %}"></script>
 
 <div class="d-flex justify-content-center mt-3">
-    <div class="col-6">
+    <div class="comments col-6">
         {% include './submission-card.html' with submission=submission %}
     </div>
 </div>
