--- a/templates/public/submission-card.html
+++ b/templates/public/submission-card.html
@@ -114,8 +114,9 @@
                             <div class="media my-3">
                                 <img src="{% if comment.user.avatar_url %}{{comment.user.avatar_url}}{% else %}{% static 'images/default-avatar.png' %}{% endif %}" alt="avatar" class="mr-3 rounded-circle" style="width: 50px; height: 50px;">
                                 <div class="media-body">
-                                    <div class="d-flex justify-content-between">
-                                        <h5 class="mt-0">{{ comment.user }}</h5>
+                                    <div class="d-flex ">
+                                        <h5 class="mt-0 marg">{{ comment.user }}</h5>
+                                        <h5 class="marg">·</h5>
                                         <span class="text-muted">{{ comment.created_at|naturaltime }}</span>
                                     </div>
                                     <p>{{ comment.content_html|default:''|safe }}</p>
