--- a/templates/public/submission-card.html
+++ b/templates/public/submission-card.html
@@ -112,12 +112,13 @@
                     {% for comment in comments %}
                         <div class="card">
                             <div class="media my-3">
-                                <img src="{% if comment.user.avatar_url %}{{comment.user.avatar_url}}{% else %}{% static 'images/default-avatar.png' %}{% endif %}" alt="avatar" class="mr-3 rounded-circle" style="width: 50px; height: 50px;">
+                                <!-- <img src="{% if comment.user.avatar_url %}{{comment.user.avatar_url}}{% else %}{% static 'images/default-avatar.png' %}{% endif %}" alt="avatar" class="mr-3 rounded-circle" style="width: 50px; height: 50px;"> -->
                                 <div class="media-body">
-                                    <div class="d-flex ">
+                                    <div class="d-flex">
+                                        <img src="{% if comment.user.avatar_url %}{{comment.user.avatar_url}}{% else %}{% static 'images/default-avatar.png' %}{% endif %}" alt="avatar" class="mr-3 rounded-circle el1" style="width: 50px; height: 50px;">
                                         <h5 class="mt-0 marg">{{ comment.user }}</h5>
                                         <h5 class="marg">·</h5>
-                                        <span class="text-muted">{{ comment.created_at|naturaltime }}</span>
+                                        <span class="text-muted marg">{{ comment.created_at|naturaltime }}</span>
                                     </div>
                                     <p>{{ comment.content_html|default:''|safe }}</p>
                                     {% if request.user.is_authenticated and comment.user.user == request.user %}
